Pong: fix safari mobile searchbar overlap

--- a/games/pong/style.css
+++ b/games/pong/style.css
@@ -8,7 +8,13 @@ canvas {
     position: absolute;
     top: 50%;
     left: 50%;
-    max-width: 97vw;
-    max-height: 97vh;
+    max-width: 97dvw;
+    max-height: 97dvh;
     transform: translate(-50%, -50%);
+
+    user-select: none;
+        -moz-user-select: none;
+        -khtml-user-select: none;
+        -webkit-user-select: none;
+        -o-user-select: none;
 }
